examples/test-nfs-csi.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-nfs
  namespace: default
  labels:
    app: nginx
spec:
  serviceName: statefulset-nfs
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: statefulset-nfs
          image: mcr.microsoft.com/oss/nginx/nginx:1.19.5
          command:
            - "/bin/bash"
            - "-c"
            - set -euo pipefail; while true; do echo $(date) >> /mnt/nfs/outfile; sleep 1; done
          volumeMounts:
            - name: persistent-storage
              mountPath: /mnt/nfs
              readOnly: false
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  volumeClaimTemplates:
    - metadata:
        name: persistent-storage
      spec:
        storageClassName: nfs-csi
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
