examples/test-nginx-ingress.yml
# example of a deployment of nginx, this is a test to see if the nginx web and ingress with LoadBalancer service is working
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  labels:
    app: nginx-web
spec:
  type: LoadBalancer
  selector:
    app: nginx-web
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
---
# example of an ingress resource for the nginx deployment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.lan
    http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: nginx-web
            port:
              number: 8080
